Archive2/14/9d30b795ada1e6/output
main.cpp:5:2: error: no newline at end of file [-Werror,-Wnewline-eof]
}
 ^
1 error generated.
